# nanopi

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
common_lib/: CMakeLists.txt
common_lib/src/: common_func.cpp  common_func.h
usb_cam/: CMakeLists.txt  Makefile  cmake_install.cmake  v4l2.cpp  v4l2.h
usb_cam/src/: v4l2.cpp  v4l2.h  video.cpp  video.h
