PROJECT(usb_cam)

message("Process Project: ${PROJECT_NAME}")

file(GLOB SRC_LIST
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${COMMON_LIB_PATH}/src)
INCLUDE_DIRECTORIES(${COMMON_LIB_PATH}/jpeg/output/include)
LINK_DIRECTORIES(${EXECUTABLE_OUTPUT_PATH})
LINK_DIRECTORIES(${COMMON_LIB_PATH}/jpeg/output/lib)

ADD_EXECUTABLE(usb_cam ${SRC_LIST})
TARGET_LINK_LIBRARIES(usb_cam -lcpc)
TARGET_LINK_LIBRARIES(usb_cam -ljpeg)

ADD_CUSTOM_COMMAND(TARGET usb_cam
  POST_BUILD
  COMMAND cp ${EXECUTABLE_OUTPUT_PATH}/usb_cam ${PROJECT_SOURCE_DIR}/bin
)
